--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@types/lodash": "^4.14.168",
+    "ahooks": "^2.10.4",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "less": "^4.1.1",
@@ -27,7 +28,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "umi-request": "^1.3.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
